--- a/package.json
+++ b/package.json
@@ -25,16 +25,21 @@
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/react-native": "^11.0.0",
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^26.0.23",
     "@types/react-native": "^0.69.3",
     "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
+    "abort-controller": "^3.0.0",
     "babel-jest": "^26.6.3",
+    "cross-fetch": "^3.1.5",
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.70.3",
+    "msw": "^0.44.2",
     "react-test-renderer": "18.0.0",
     "typescript": "^4.4.4"
   },
@@ -47,6 +52,15 @@
       "jsx",
       "json",
       "node"
+    ],
+    "moduleNameMapper": {
+      "\\.(jpg|ico|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mock__/ImageMock.js"
+    },
+    "transformIgnorePatterns": [
+      "node_modules/(?!(jest-)?@?react-native|@react-navigation|react-native-linear-gradient)"
+    ],
+    "setupFilesAfterEnv": [
+      "<rootDir>/jestSetup.js"
     ]
   }
 }
